JAVA JAKE KANN NUN KOMPILIEREN  + expandables  + some optimziations
TODO: comments & tests

Signed-off-by: EagleoutIce <maeusepiep99@web.de>